# github-activity-reporter

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  cli.py  config.yaml  github_oauth.py  github_report.py  pyproject.toml  requirements.txt
src/: client.py  inbox.py  renderer.py  report_strategies.py  reporter.py  state.py  strategies.py
