[project]
name = "github-activity-reporter"
version = "0.1.0"
description = "Generate comprehensive GitHub activity reports with AI-powered narratives"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygithub>=2.1.1",
    "google-genai>=0.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
github_report = "github_report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]